<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/last_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="12dp"
        android:text="@string/last_action_placeholder"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/identify_a"
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:text="@string/identify_a"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/identify_a_again"
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:text="@string/identify_a_again"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/change_plan"
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:text="@string/change_plan"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/custom_event"
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:text="@string/custom_event"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/purchase_two_products"
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:text="@string/purchase_two_products"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/purchase_custom_name"
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:text="@string/purchase_custom_name"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/screen"
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:text="@string/screen"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/opt_out_event"
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:text="@string/opt_out_event"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/reset"
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:text="@string/reset"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/identify_b"
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:text="@string/identify_b"
                android:textAllCaps="false" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
